@@ -44,9 +44,7 @@ remove = File::stat
 remove = File::Spec
 remove = Fcntl
 remove = Exporter
-
-; comes with File::HomeDir
-remove = File::HomeDir::Test
+remove = File::Glob
 
 ; used optionally
 remove = PlugAuth::Plugin::LDAP
