@@ -6,7 +6,7 @@ use 5.010001;
 use Role::Tiny::With;
 use Path::Class::Dir;
 use Path::Class::File;
-use File::HomeDir;
+use File::Glob qw( bsd_glob );
 use YAML::XS qw( Dump LoadFile );
 use DateTime;
 
@@ -160,8 +160,7 @@ sub log_filename
   }
   
   my $filename = Path::Class::File->new(
-    File::HomeDir->my_home,
-    '.plugauth_plugin_audit',
+    bsd_glob('~/.plugauth_plugin_audit'),
     sprintf("%04d", $year),
     sprintf("%02d", $month),
     sprintf("%02d", $day),
