@@ -1,4 +1,5 @@
 use strict;
 use warnings;
+use Test::Clustericious::Log;
 use Test::PlugAuth::Plugin::Auth;
 run_tests 'Test';
